--- a/P4M Notebook1.ipynb
+++ b/P4M Notebook1.ipynb
@@ -3936,7 +3936,7 @@
         "print(divmod(10,3.3))\n",
         "print(divmod(10,-3.3))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4156,7 +4156,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da0ca6d5-508e-4a00-bb71-199b3bb306f6"
+        "outputId": "fd5a1a7c-b164-4da1-c928-5a4519c4c417"
       },
       "source": [
         "from math import sqrt\n",
@@ -4171,31 +4171,31 @@
         "  print(\"error \", i+1,  \" = \", error)\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "guess  1  =  10000.5\n",
-            "error  1  =  9859.07864376269\n",
-            "guess  2  =  5001.2499500025\n",
-            "error  2  =  4859.82859376519\n",
-            "guess  3  =  2502.6244751462077\n",
-            "error  3  =  2361.2031189088984\n",
-            "guess  4  =  1255.3080428164837\n",
-            "error  4  =  1113.8866865791742\n",
-            "guess  5  =  635.620193581857\n",
-            "error  5  =  494.19883734454754\n",
-            "guess  6  =  333.54276246293597\n",
-            "error  6  =  192.12140622562646\n",
-            "guess  7  =  196.75254444471932\n",
-            "error  7  =  55.33118820740981\n",
-            "guess  8  =  149.20153615082518\n",
-            "error  8  =  7.780179913515667\n",
-            "guess  9  =  141.62420669397466\n",
-            "error  9  =  0.20285045666514634\n",
-            "guess  10  =  141.42150151017185\n",
-            "error  10  =  0.00014527286234056191\n"
+            "guess  1  =  1.5\n",
+            "error  1  =  0.08578643762690485\n",
+            "guess  2  =  1.4166666666666665\n",
+            "error  2  =  0.002453104293571373\n",
+            "guess  3  =  1.4142156862745097\n",
+            "error  3  =  2.123901414519125e-06\n",
+            "guess  4  =  1.4142135623746899\n",
+            "error  4  =  1.5947243525715749e-12\n",
+            "guess  5  =  1.414213562373095\n",
+            "error  5  =  -2.220446049250313e-16\n",
+            "guess  6  =  1.414213562373095\n",
+            "error  6  =  -2.220446049250313e-16\n",
+            "guess  7  =  1.414213562373095\n",
+            "error  7  =  -2.220446049250313e-16\n",
+            "guess  8  =  1.414213562373095\n",
+            "error  8  =  -2.220446049250313e-16\n",
+            "guess  9  =  1.414213562373095\n",
+            "error  9  =  -2.220446049250313e-16\n",
+            "guess  10  =  1.414213562373095\n",
+            "error  10  =  -2.220446049250313e-16\n"
           ],
           "name": "stdout"
         }
@@ -4216,13 +4216,52 @@
         "id": "Bav0b9Xovg2B"
       },
       "source": [
-        "We may can analytically describe how the error of our guess changes with each iteration of our loop. Suppose that we are trying to approximate $\\sqrt{N}$, and our guess is $g = \\sqrt{N} + \\varepsilon$. After performing one loop of the above process, our new guess is \n",
-        "$$\\frac{1}{2} \\left(\\sqrt{N} + \\varepsilon + \\frac{N}{\\sqrt{N} + \\varepsilon} \\right)$$\n",
+        "We may can analytically describe how the error of our guess changes with each iteration of our loop. Suppose that we are trying to approximate $\\sqrt{N}$, and our guess is $g_n = \\sqrt{N} + \\varepsilon_n$. After performing one loop of the above process, our new guess is \n",
+        "$$g_{n+1} = \\frac{1}{2} \\left(\\sqrt{N} + \\varepsilon_n + \\frac{N}{\\sqrt{N} + \\varepsilon_n} \\right)$$\n",
         "Performing some algebraic manipulation, we can find that this quantity is equal to \n",
-        "$$\\sqrt{N} + \\frac{\\varepsilon^2}{2(\\sqrt{N} + \\varepsilon)}.$$\n",
-        "From this, we can analyze how this procedure converges. We note that as long as our initial guess is positive, $\\sqrt{N} + \\varepsilon$ will never be negative, so at each step except for perhaps our initial guess, our error term $\\varepsilon = g - \\sqrt{N}$ will be positive. Now, provided that $\\varepsilon$ is positive, we have \n",
-        "$$\\frac{\\varepsilon^2}{2(\\sqrt{N} + \\varepsilon)} \\leq \\frac{\\varepsilon^2}{2\\varepsilon} = \\frac{\\varepsilon}{2}$$\n",
-        "so after the first step, the error will always be at least halved. We note that if our starting guess is chosen poorly, our error can increase at the first step of the procedure; e.g., if $N = 1$ and $g = .01$, then our error is $.99$, but after performing one iteration, our next guess is $g = 50.005$, so we have moved further away.\n"
+        "$$\\sqrt{N} + \\frac{\\varepsilon_n^2}{2(\\sqrt{N} + \\varepsilon_n)},\\quad \\text{ so } \\quad  \\varepsilon_{n+1} = \\frac{\\varepsilon_n^2}{2(\\sqrt{N} + \\varepsilon_n)}$$\n",
+        "From this, we can analyze the convergence of $g_n$. We note that as long as our initial guess is positive, $\\sqrt{N} + \\varepsilon_n$ will never be negative, so at each step except for perhaps our initial guess, our error term $\\varepsilon_n = g_n - \\sqrt{N}$ will be positive. Now, provided that $\\varepsilon_n$ is positive, we have \n",
+        "$$\\varepsilon_{n+1} = \\frac{\\varepsilon_n^2}{2(\\sqrt{N} + \\varepsilon_n)} \\leq \\frac{\\varepsilon_n^2}{2\\varepsilon_n} = \\frac{\\varepsilon_n}{2}$$\n",
+        "so after the first step, the error will always be at least halved, which guarantees convergence. We note that if our starting guess is chosen poorly, our error can increase at the first step of the procedure; e.g., if $N = 1$ and $g_0 = .01$, then our error is $\\varepsilon_0 = -.99$, but after performing one iteration, our next guess is $g_1 = 50.005$, so our new error is $\\varepsilon_1 = 49.005$. \n",
+        "\n",
+        "We can see that if $\\sqrt{N}$ is small compared to $\\varepsilon_n$, then $\\varepsilon_n/2$ is a very good estimate for $\\varepsilon_{n+1}$, which we can confirm by choosing our initial guess to be much larger than $N$ in the code above. We can also see that the rate of convergence speeds up as our guess approaches the true value of $\\sqrt{N}$, with the number of correct digits in our guess roughly doubling at each step once the error drops below 1. In the implementation above, when calculating $\\sqrt{2}$, the sequence of errors reaches a fixed non-zero value due to rounding issues with floating points, but in theory, should converge to 0.\n",
+        "\n",
+        "The previous paragraph suggests that the best way to improve the convergence rate is to start with an initial guess that is not too far off the true value. Alternatively, instead of changing our initial guess based on $N$, we can \"normalize\" $N$ so that our fixed initial guess is not too far off. Given $N$, we compute $N' = N/10^{2k}$, where $k \\in \\mathbb{Z}$ is chosen such that $1 \\leq N' < 100$. Then, we compute $\\sqrt{N'}$ like before, with initial guess equal to 5 (which we know is not too different from the true value), and multiply the result by $10^d$. Code for this modified procedure is shown below.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0NyGFg0A4Bmf",
+        "outputId": "5cd7a480-a8dd-43f7-9626-bba9a8cd29e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "N = 1234567890\n",
+        "exponent = 0\n",
+        "while N < 1: #Move N into the desired range\n",
+        "  N = N * 100\n",
+        "  exponent = exponent - 1\n",
+        "while N >= 100: #Move N into the desired range\n",
+        "  N = N/100\n",
+        "  exponent = exponent + 1\n",
+        "guess = 5\n",
+        "iterations = 10\n",
+        "for i in range(iterations):\n",
+        "  guess = (guess + N/guess)/2\n",
+        "print(guess * 10**exponent)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "35136.41828644462\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -4246,28 +4285,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a5c220cd-56c0-4fd8-9aa8-a8fb147c3d67"
+        "outputId": "c97b82ca-2e09-4903-9889-63d225f2565d"
       },
       "source": [
         "coefficient = 1\n",
         "term = 0\n",
         "estimate = 0\n",
         "new_estimate = 1\n",
-        "while estimate != new_estimate:\n",
+        "while estimate != new_estimate: #Add terms of the series until the float stabilizes\n",
         "  term = term + 1\n",
         "  estimate = new_estimate\n",
         "  coefficient = coefficient/term\n",
         "  new_estimate = new_estimate + coefficient\n",
         "print(estimate)\n",
-        "print(term)"
+        "print(\"The float stabilizes after\", term, \"terms.\")"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "2.7182818284590455\n",
-            "18\n"
+            "The float stabilizes after 18 terms.\n"
           ],
           "name": "stdout"
         }
@@ -4351,25 +4390,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4392f8df-d547-4139-f6a3-13e6ab04a914"
+        "outputId": "f66b320c-5c4b-4354-daef-7d268543ecff"
       },
       "source": [
         "estimate = 0\n",
         "new_estimate = 4/5 - 1/239 \n",
         "term = 1\n",
-        "while estimate != new_estimate:\n",
+        "while estimate != new_estimate: #Add terms of the series until the float stabilizes\n",
         "  estimate = new_estimate\n",
         "  new_estimate = estimate + 4 * (-1)**term * (1/5)**(2*term + 1)/(2 * term + 1) -  (-1)**term * (1/239)**(2*term + 1)/(2 * term + 1)\n",
         "  term = term +1\n",
-        "print(term)\n",
+        "print(\"The float stabilizes after\", term, \"terms.\")\n",
         "print(4*estimate)"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "12\n",
+            "The float stabilizes after 12 terms.\n",
             "3.141592653589794\n"
           ],
           "name": "stdout"
@@ -4406,13 +4445,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1d1aea27-93c4-440b-e804-a40cf5ed0b23"
+        "outputId": "3eef1d3d-99df-433a-c833-19ab8e600743"
       },
       "source": [
         "from mpmath import *\n",
         "print(mp)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -4572,7 +4611,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "65589695-4db1-44dc-fc09-a6b3feaa84bf"
+        "outputId": "5bafd0f2-bae6-4998-8a03-3bcf850abb0e"
       },
       "source": [
         "mp.dps = 100\n",
@@ -4581,87 +4620,59 @@
         "term = 2\n",
         "pi_estimate = (inscribed_p + circumscribed_p)/4 # The average of the inscribed and circumscribed perimeters should be close to the perimeter of the circle, 2pi\n",
         "actual_pi = 4*mp.atan(1)\n",
-        "while abs(pi_estimate - actual_pi) > 1E-100:\n",
+        "while abs(pi_estimate - actual_pi) > 1E-100: #iterate until the first 100 digits match\n",
         "  term += 1\n",
         "  circumscribed_p = 2*inscribed_p*circumscribed_p/(inscribed_p + circumscribed_p)\n",
         "  inscribed_p = sqrt(inscribed_p*circumscribed_p)\n",
         "  pi_estimate = (inscribed_p + circumscribed_p)/4\n",
-        "print(term)\n",
-        "\n",
-        "estimate = mpf(0)\n",
-        "term = 0\n",
-        "while abs(4*estimate - actual_pi) > 1E-100 and term < 30:\n",
-        "  estimate = estimate + 4 * (-1)**term * (1/(5**(2*term + 1)))/(2 * term + 1) - (-1)**term * (1/(239**(2*term + 1)))/(2 * term + 1)\n",
-        "  print(term)\n",
-        "  print(abs(4*estimate - actual_pi))\n",
-        "  term = term +1\n"
+        "print(\"We reach 100 digits of accuracy after\", term, \"iterations.\")"
       ],
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "167\n",
-            "0\n",
-            "0.04167094473656677324615875023260552790842070568165687433755540769218359371379100137196517465788293202\n",
-            "1\n",
-            "0.0009956242637327436605024972270322339723145348566857487025246628034218750362089986280348253421170679793\n",
-            "2\n",
-            "0.00002837573524136725230141427513385062968398131637804810552684375600083028629504495106673715788293202072\n",
-            "3\n",
-            "0.0000008814076157627735428142910713247501683706887030483683645351340530356602460779155531068317277399763495\n",
-            "4\n",
-            "0.00000002881460645944857318510524462071492011702237818486701957317369087974773001015320573962930939751108807\n",
-            "5\n",
-            "0.0000000009744844496423341009715461485925670367069178606457178638889054530798729374008701883445704067419664675\n",
-            "6\n",
-            "0.00000000003376170420381971217719719547275686347352523612069662684932042201108035120286608861834827854703883804\n",
-            "7\n",
-            "0.000000000001190829129513622579667009553121381122515732859361848672756866751810724652687393558211910412900845389\n",
-            "8\n",
-            "0.00000000000004278969401578930893290527744180579919602559994890190072937982715263243519518792586743634222264639787\n",
-            "9\n",
-            "0.0000000000000013608744052633235460474505780019108635182237683577513095499137208360386806633530081050045857394686\n",
-            "10\n",
-            "0.0000000000000002369556899747715912643522677343774125637480655744893314801798967510763054150822044864183241741817492\n",
-            "11\n",
-            "0.0000000000000001786001560617281147764260832414528982269732059442776126638470311473545291228007823665248279156595056\n",
-            "12\n",
-            "0.0000000000000001807476397097281148590931865597322338692668939486789715771176339887677461362135835358492500962998471\n",
-            "13\n",
-            "0.0000000000000001806681032783207074455033147676870151946930893728606348942853076411803860560186079745869412483602637\n",
-            "14\n",
-            "0.0000000000000001806710653247317419281585655549422248865190831572033777239356181831433660029135518020350406447327025\n",
-            "15\n",
-            "0.0000000000000001806709544868660387023315013592613567556267357669366595412913821644113210354253087782292586251401588\n",
-            "16\n",
-            "0.0000000000000001806709586516828105811196355038819943811381862647821357932831282659995303514574133113692542208508226\n",
-            "17\n",
-            "0.0000000000000001806709584946097208988339140802483403361660681904252456021664795716536013406633634710736713083363825\n",
-            "18\n",
-            "0.0000000000000001806709585005530269949204012905662797157803743695365709466905469720494793370716589433014990293871869\n",
-            "19\n",
-            "0.0000000000000001806709585003274861481971192586809223492756622875405250125061312950978218134236167599492244894776439\n",
-            "20\n",
-            "0.0000000000000001806709585003360677023651270630615637805096638247897174008887824663236176623919556955342931375225868\n",
-            "21\n",
-            "0.0000000000000001806709585003357404058805797886104811782357901626546124335267707683452683895304295296297656404897418\n",
-            "22\n",
-            "0.0000000000000001806709585003357529158795447066558215431485114795322084428333938264217432860505213609300513586813439\n",
-            "23\n",
-            "0.0000000000000001806709585003357524367732013693690307656468046286189249322423899015638249212515534214455377517121511\n",
-            "24\n",
-            "0.000000000000000180670958500335752455155240664758807879266771245781138732402168066173828202413449165605247971215056\n",
-            "25\n",
-            "0.0000000000000001806709585003357524544487936643869654050254781440727910639541471412446988704157479326998119548546244\n",
-            "26\n",
-            "0.0000000000000001806709585003357524544759852093069382123931557264503889294093095858061884224581032355677145246705601\n",
-            "27\n",
-            "0.0000000000000001806709585003357524544749370988482047151449654911467311327709139392105769913219984445739222761472946\n",
-            "28\n",
-            "0.000000000000000180670958500335752454474977552234331271178193912158813306635514777216317465623137688214358344034553\n",
-            "29\n",
-            "0.0000000000000001806709585003357524544749759889509351940976649133552649494709707869072146911063609207416369183476052\n"
+            "We reach 100 digits of accuracy after 167 iterations.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yTkObkKgF_Aj"
+      },
+      "source": [
+        "Below, I reuse the code for the approximation of $\\pi$ via Machin's formula shown above, this time using the mpmath package for high precision calculation, to see how many terms of the arctan series are needed to reach 100 digits of accuracy."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K_5HNW3AGvjl",
+        "outputId": "bbcbfcfb-10ae-4003-f3c1-8e96b7552d81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "mp.dps = 100\n",
+        "actual_pi = 4*mp.atan(1)\n",
+        "estimate = mpf(0)\n",
+        "term = 0\n",
+        "while abs(4*estimate - actual_pi) > 1E-100: #iterate until the first 100 digits match\n",
+        "  estimate = estimate + 4 * (-1)**term * (mpf(1)/(5**(2*term + 1)))/(2 * term + 1) #the term from the series for 4*arctan(1/5)\n",
+        "  estimate = estimate - (-1)**term * (mpf(1)/(239**(2*term + 1)))/(2 * term + 1) #the term from the series for -arctan(1/239)\n",
+        "  term = term +1\n",
+        "print(\"We reach 100 digits of accuracy after\", term, \"terms of the series.\")"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "We reach 100 digits of accuracy after 71 terms of the series.\n"
           ],
           "name": "stdout"
         }
