--- a/P4M_Notebook2.ipynb
+++ b/P4M_Notebook2.ipynb
@@ -584,7 +584,7 @@
         "\n",
         "5. `%` formats a number as a percent, so a floating point number `f` is multiplied by 100 and then a % sign is added at the end. `E` formats a number in scientific notation, so `f` is written as a number between 1 and 10, multiplied by an appropriate power of 10.\n",
         "\n",
-        "6. A function might have a non-deterministic output, such as a function that simulates a coin flip, which would not require any input."
+        "6. A function might have a non-deterministic output, such as a function that generates a random number between 0 and 1, which would not need any input. Also, if you have a piece of code that is repeated in several places, it might be helpful to define a function to make it more readable."
       ]
     },
     {
@@ -597,6 +597,7 @@
         "outputId": "3063c6b9-0333-4c99-8f2c-02c6d33fb26d"
       },
       "source": [
+        "#2\n",
         "from math import pi\n",
         "def area_circle(radius):\n",
         "  area = pi*radius**2\n",
@@ -637,6 +638,7 @@
         "outputId": "5631b19c-a8c6-4fd2-e0ee-762759b63542"
       },
       "source": [
+        "#3\n",
         "def factorial(n):\n",
         "  product = 1\n",
         "  for i in range(1,n+1):\n",
@@ -666,6 +668,7 @@
         "outputId": "4c05b0ac-edcf-4883-c258-f9552d169daf"
       },
       "source": [
+        "#4\n",
         "\"Pythython\".replace(\"yth\",\"arag\")"
       ],
       "execution_count": null,
@@ -697,6 +700,7 @@
         "outputId": "37662651-c9ff-4709-834d-6ce5d989d903"
       },
       "source": [
+        "#5\n",
         "print(\"{0:%} is a number\".format(12.5))\n",
         "print(\"{0:E} is also a number\".format(13.3))"
       ],
@@ -1108,6 +1112,7 @@
         "outputId": "f8b0fff7-a14c-459a-aa60-b038adf30357"
       },
       "source": [
+        "#1\n",
         "def my_abs(x):\n",
         "  if x >= 0 :\n",
         "    return x\n",
@@ -1141,6 +1146,7 @@
         "outputId": "a42f35dc-2eeb-4aaa-97e9-4ce171527f30"
       },
       "source": [
+        "#2\n",
         "def is_prime(n):\n",
         "  if n > 1000000:\n",
         "    print(\"Number too big\")\n",
@@ -1186,6 +1192,7 @@
         "outputId": "8c819616-2eab-4486-84dc-97d9d82274c4"
       },
       "source": [
+        "#3\n",
         "def thrarity(n): #assumes the input is an integer\n",
         "  if n%3 == 0:\n",
         "    return \"threeven\"\n",
@@ -1217,26 +1224,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd450e73-00f1-4fd2-b88d-163337928c5d"
+        "outputId": "e0a59699-6c5c-48b4-9fb6-0d5cfe20a4e4"
       },
       "source": [
+        "#4\n",
         "def sum_of_squares(n):\n",
-        "  x = 0\n",
-        "  y = 0\n",
-        "  while x**2 < n:\n",
-        "    x = x+1\n",
-        "  while x >= 0:\n",
-        "    if x**2 + y**2 == n:\n",
-        "      return x,y\n",
-        "    elif x**2 + y**2 < n:\n",
-        "      y = y + 1\n",
-        "    else:\n",
-        "      x = x-1\n",
+        "  for x in range(n+1):\n",
+        "    for y in range(x+1):\n",
+        "      if x**2 + y**2 == n:\n",
+        "        return x,y\n",
         "  return None\n",
+        "\n",
         "for i in range(20):\n",
         "  print(\"{}: \".format(i), sum_of_squares(i))\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1276,6 +1278,7 @@
         "outputId": "c188d417-fa34-4a08-ab42-af716062a13f"
       },
       "source": [
+        "#5\n",
         "from numpy import log\n",
         "def gamma(n):\n",
         "  harmonic_num = 0\n",
@@ -1722,7 +1725,7 @@
       "source": [
         "### Solutions\n",
         "\n",
-        "1. `ZeroDivisionError` occurs when Python tries to divide by zero. You might want to raise this exception yourself if you are dividing by a small quantity which you don't know exactly, so it might actually be zero.  \n",
+        "1. `ZeroDivisionError` occurs when Python tries to divide by zero. You might want to raise this exception yourself if you are dividing by a small quantity which you don't know exactly, so it might actually be zero.\n",
         "\n",
         "2. See below"
       ]
@@ -1738,6 +1741,7 @@
         "outputId": "8d055c31-38ca-4f0c-a818-c1b3204b0290"
       },
       "source": [
+        "#1\n",
         "print(1/0)"
       ],
       "execution_count": null,
@@ -1759,13 +1763,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "NC_YkAHIzHXX",
-        "outputId": "07264176-2524-4f13-e596-0a8b5ba7320e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
-        }
+        },
+        "outputId": "07264176-2524-4f13-e596-0a8b5ba7320e"
       },
       "source": [
+        "#2\n",
         "def is_prime(n):\n",
         "  if type(n) != int:\n",
         "    raise TypeError('Only integers can be prime')\n",
@@ -1778,7 +1783,7 @@
         "  return True\n",
         "is_prime(1.5)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1926,7 +1931,7 @@
         "        dividend = divisor  \n",
         "        divisor = remainder"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1941,7 +1946,7 @@
       "source": [
         "Euclidean_algorithm(133, 58)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1968,7 +1973,7 @@
       "source": [
         "Euclidean_algorithm(1312331323, 58123123)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2024,7 +2029,7 @@
         "        divisor = remainder\n",
         "    return abs(dividend)  #  abs() is used, since we like our GCDs to be positive."
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2048,7 +2053,7 @@
       "source": [
         "GCD(111,27)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2076,7 +2081,7 @@
       "source": [
         "GCD(111,-27)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2257,22 +2262,22 @@
         "        a, b = b, a % b\n",
         "    return abs(a)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "SP8md911uXdy",
-        "outputId": "46485888-4bee-4ba1-e587-5bf1d1b19737",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "46485888-4bee-4ba1-e587-5bf1d1b19737"
       },
       "source": [
         "GCD(1234567,4958675)\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2323,36 +2328,58 @@
       },
       "source": [
         "###Solutions \n",
-        "1. \n",
+        "1. We can improve the `is_prime` function by only checking $n$ for factors between 1 and $\\sqrt{n}$, because if $n$ had a divisor $d$ greater than $\\sqrt{n}$, then `is_prime` would have already found the smaller divisor $n/d$.\n",
         "\n",
-        "2. "
+        "2. It is always possible for the Euclidean algorithm to terminate after a small number of steps. For example, if one of the inputs is a multiple of the other, than the Euclidean algorithm will terminate after just one step, regardless of the actual sizes of the inputs. After testing different values for $a$ and $b$, it appears that the worst case scenario is if $a$ and $b$ are consecutive Fibonacci numbers, and it can probably be proved by induction that if $b < a$ and $b < F_n$, where $F_n$ is the $n$th Fibonacci number, then the Euclidean algorithm terminates after at most $n$ steps.\n",
+        "\n",
+        "3. If we consider the natural numbers partially ordered by divisibility, then the implementation of `GCD` above gives the greatest lower bound of $a$ and $b$, so `LCM` should return the leastu upper bound of $a$ and $b$. Under this interpretation, because $0$ is the maximal element in #\\mathbb{N}$ partially ordered by inclusion, the `LCM(a,0) = 0` should hold for all `a`. This agrees with the definition given by $LCM(a,b) = a \\cdot b/GCD(a,b)$ "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XLVsDlQEuXdy"
+        "id": "XLVsDlQEuXdy",
+        "outputId": "9271b18a-75d3-42d9-aa39-35680d148906",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "#1\n",
         "def is_prime(n):\n",
         "  j = 2\n",
-        "  while j < n:\n",
+        "  while j**2 <= n:\n",
         "    if n%j == 0:\n",
         "      return False\n",
         "    j = j + 1\n",
-        "  return True\n"
+        "  return True\n",
+        "  \n",
+        "is_prime(25)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "M02OsBxk-xWv",
-        "outputId": "a8fd8216-9d2a-4efb-b1ff-f46e469c7bcd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8a12eb1d-fd94-4cce-c021-fac6f569a814"
       },
       "source": [
         "def Euclidean_algorithm_steps(a,b):\n",
@@ -2366,61 +2393,45 @@
         "        divisor = remainder\n",
         "        steps = steps + 1\n",
         "    return steps\n",
-        "def maximum_steps(n):\n",
-        "  maximum = 0\n",
-        "  maximum_input = 0\n",
-        "  for i in range(1,n):\n",
-        "    if Euclidean_algorithm_steps(n,i) > maximum:\n",
-        "      maximum = Euclidean_algorithm_steps(n,i)\n",
-        "      maximum_input = i\n",
-        "  return maximum_input,maximum\n",
-        "for i in range(1,40):\n",
-        "  print(i, maximum_steps(i))"
+        "print(Euclidean_algorithm_steps(34,21))"
       ],
-      "execution_count": 23,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1 (0, 0)\n",
-            "2 (1, 1)\n",
-            "3 (2, 2)\n",
-            "4 (3, 2)\n",
-            "5 (3, 3)\n",
-            "6 (4, 2)\n",
-            "7 (4, 3)\n",
-            "8 (5, 4)\n",
-            "9 (5, 3)\n",
-            "10 (6, 3)\n",
-            "11 (7, 4)\n",
-            "12 (7, 4)\n",
-            "13 (8, 5)\n",
-            "14 (9, 4)\n",
-            "15 (11, 4)\n",
-            "16 (9, 4)\n",
-            "17 (10, 4)\n",
-            "18 (11, 5)\n",
-            "19 (11, 5)\n",
-            "20 (11, 4)\n",
-            "21 (13, 6)\n",
-            "22 (13, 4)\n",
-            "23 (14, 5)\n",
-            "24 (13, 4)\n",
-            "25 (14, 5)\n",
-            "26 (15, 5)\n",
-            "27 (17, 5)\n",
-            "28 (17, 5)\n",
-            "29 (18, 6)\n",
-            "30 (19, 6)\n",
-            "31 (18, 6)\n",
-            "32 (23, 5)\n",
-            "33 (19, 5)\n",
-            "34 (21, 7)\n",
-            "35 (22, 5)\n",
-            "36 (22, 5)\n",
-            "37 (23, 6)\n",
-            "38 (22, 5)\n",
-            "39 (25, 6)\n"
+            "7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ly7JDM7u_0AD",
+        "outputId": "6f45546f-cd65-4464-c0ed-550d436eae2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def GCD(a,b):\n",
+        "    while b:   # I.e., while b != 0.\n",
+        "        a, b = b, a % b\n",
+        "    return abs(a)\n",
+        "\n",
+        "def LCM(a,b):\n",
+        "  return a*b//GCD(a,b)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "132\n",
+            "0\n",
+            "10\n"
           ],
           "name": "stdout"
         }
@@ -2430,14 +2441,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "H4Yd89zquXdy",
-        "outputId": "25a8c587-02ff-4169-fa0a-6450d5062682",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "25a8c587-02ff-4169-fa0a-6450d5062682"
       },
       "source": [
+        "#5\n",
         "from mpmath import *\n",
-        "def approximate_e(n):\n",
+        "def approximate_e(n): #approximate e to at least n digits of accuracy\n",
         "  mp.dps = n+1\n",
         "  approximation = mpf(0)\n",
         "  term = 0\n",
@@ -2453,7 +2465,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
